# FrigateReportGenerator

./: Cargo.toml  README.md  Settings.toml
src/: main.rs  report_template.tex
